EDIT undo some laravel css defaults, fix root page
Didn't like some of Laravel's css defaults, so reverted some of them:
* Increased text size as the default was too small for readability.
* Reverted to default bootstrap color theme as default was too light on
contrast for readability.
* Use system fonts rather web fonts.

Also removed the generated css from git as they shouldn't be checked in.

The root home page was broken by the new auto-generated home page, so
I've replaced it with a welcome page.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,19 +1,21 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #fcfdfb;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
+// just use whatever system font the user has available
+$font-family-sans-serif: '-apple-system', 'BlinkMacSystemFont', '"Segoe UI"', 'Ubuntu', 'Montserrat', 'Oxygen', 'Cantarell', 'Roboto', '"Helvetica Neue"', 'Arial', '"Noto Sans"', 'sans-serif', '"Apple Color Emoji"', '"Segoe UI Emoji"', '"Segoe UI Symbol"', '"Noto Color Emoji"';
+$font-size-base: 1rem;
 $line-height-base: 1.6;
 
 // Colors
-$blue: #3490dc;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
+// go back to default bootstrap, laravel colors too light, bad readability
+//$blue: #3490dc;
+//$indigo: #6574cd;
+//$purple: #9561e2;
+//$pink: #f66d9b;
+//$red: #e3342f;
+//$orange: #f6993f;
+//$yellow: #ffed4a;
+//$green: #38c172;
+//$teal: #4dc0b5;
+//$cyan: #6cb2eb;
